// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutView renders when loading 1`] = `
<div
  className="AboutView"
>
  <WithStyles(Typography)
    component="h1"
    gutterBottom={true}
    variant="h4"
  >
    About
  </WithStyles(Typography)>
  <WithStyles(Typography)
    gutterBottom={true}
    variant="body1"
  >
    Officia cillum ea incididunt laborum velit. Deserunt voluptate exercitation deserunt ex occaecat fugiat enim incididunt sit est. Exercitation laborum ex fugiat in amet laboris reprehenderit velit tempor dolore nostrud do.
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="h2"
    gutterBottom={true}
    variant="h5"
  >
    Contributors
  </WithStyles(Typography)>
  <WithStyles(CircularProgress) />
</div>
`;

exports[`AboutView renders when not loading 1`] = `
<div
  className="AboutView"
>
  <WithStyles(Typography)
    component="h1"
    gutterBottom={true}
    variant="h4"
  >
    About
  </WithStyles(Typography)>
  <WithStyles(Typography)
    gutterBottom={true}
    variant="body1"
  >
    Officia cillum ea incididunt laborum velit. Deserunt voluptate exercitation deserunt ex occaecat fugiat enim incididunt sit est. Exercitation laborum ex fugiat in amet laboris reprehenderit velit tempor dolore nostrud do.
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="h2"
    gutterBottom={true}
    variant="h5"
  >
    Contributors
  </WithStyles(Typography)>
  <ul
    className="ContributorList"
  >
    <li
      className="ContributorList__Item"
      key="0"
    >
      <WithStyles(Card)>
        <WithStyles(CardHeader)
          avatar={
            <WithStyles(Avatar)
              aria-label="Recipe"
              src="http://foo.com/image1.jpg"
            />
          }
          title="foo"
        />
      </WithStyles(Card)>
    </li>
    <li
      className="ContributorList__Item"
      key="1"
    >
      <WithStyles(Card)>
        <WithStyles(CardHeader)
          avatar={
            <WithStyles(Avatar)
              aria-label="Recipe"
              src="http://foo.com/image2.jpg"
            />
          }
          title="bar"
        />
      </WithStyles(Card)>
    </li>
  </ul>
</div>
`;

exports[`AboutView renders when there is an error 1`] = `
<div
  className="AboutView"
>
  <WithStyles(Typography)
    component="h1"
    gutterBottom={true}
    variant="h4"
  >
    About
  </WithStyles(Typography)>
  <WithStyles(Typography)
    gutterBottom={true}
    variant="body1"
  >
    Officia cillum ea incididunt laborum velit. Deserunt voluptate exercitation deserunt ex occaecat fugiat enim incididunt sit est. Exercitation laborum ex fugiat in amet laboris reprehenderit velit tempor dolore nostrud do.
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="h2"
    gutterBottom={true}
    variant="h5"
  >
    Contributors
  </WithStyles(Typography)>
  <WithStyles(Typography)
    color="error"
    gutterBottom={true}
    variant="body2"
  >
    Error! 
    Something went wrong!
  </WithStyles(Typography)>
</div>
`;
